# ai-development-assistant

./: .env  .env.example  .gitignore  Dockerfile  GITHUB_SETUP.md  README.md  SETUP.md  args_parser.py  docker-cleanup.sh  ducky-setup.py  pyproject.toml  🏠_Home.py
cs5740-personas/: README.md
cs5740-personas/challenges/design_architecture/data_specialists/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/design_architecture/system_architects/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/design_architecture/ux_ui_designers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/development/software_engineers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/development/specialized_engineers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/operations_deployment/devops_engineers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/operations_deployment/release_engineers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/planning_requirements/product_managers/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/planning_requirements/requirements_analysts/: CHALLENGE_PROMPT.md
cs5740-personas/challenges/quality_testing/performance_engineers/: CHALLENGE_PROMPT.md
cs5740-personas/personas/design_architecture/data_specialists/: Devin.md  (+4 more)
pages/: 1_💬_Quick_Chat.py  2_🎓_Learning_Topics.py  3_📓_Requirements.py  4_🤖_AI_Code_Assistant.py  6_🤖_AI_Agents.py
services/: agent_loop.py  agent_tools.py  extract.py  llm.py  personas.py  prompts.py  requirements.py
ui/: README.md
ui/components/: __init__.py  code_editor.py  sidebar.py
ui/interactions/: __init__.py  chat_handler.py
ui/layouts/: __init__.py  two_column.py
(+107 files in other folders)
