[project]
name = "cs5740-project-coding"
version = "2025.09"
description = "Ducky - AI-powered software developer assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "python-dotenv",
    "openai",
    "gtts",
    "httpx",
    "pandas",
    "tiktoken>=0.11.0",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.2",
    "pdf2image>=1.17.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "streamlit-ace>=0.1.1",
    "streamlit-monaco>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui", "services", "pages"]
include = [
    "🏠_Home.py",
    "data/*",
    "static/*",
]

[tool.uv]
dev-dependencies = []
